2020-06-23  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Add a 'last commit' badge

	* tests/checks.R: Comment-out two checks for now

2018-12-24  Dirk Eddelbuettel  <edd@debian.org>

	* NAMESPACE: Add .registration=TRUE to useDynLib()

2017-08-26  Dirk Eddelbuettel  <edd@debian.org>

	* .travis.yml: Updated to use run.sh from r-travis

2016-05-07  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Minor edits to catch upto current CRAN standards

	* README.md: Expanded and updated with more badges and new sections

	* .travis.yml: Updated, faster via r-cran-rcpp and r-cran-xts binaries

2014-02-12  Dirk Eddelbuettel  <edd@debian.org>

	* .travis.yml: Added

2013-10-22  Dirk Eddelbuettel  <edd@debian.org>

	* NAMESPACE: Minor cleanup

2013-07-12  Dirk Eddelbuettel  <edd@debian.org>

	* man/RcppXts-package.Rd: Added some documentation for new functions

2013-06-26  Dirk Eddelbuettel  <edd@debian.org>

	* src/xtsMod.cpp: Added more functions now that xts 0.9-5 is on CRAN
	* tests/check.R: Added some illustrations / tests as well

2013-01-18  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version): 0.0.4

	* DESCRIPTION (Depends): Increased to xts 0.9-2 now on CRAN

2013-01-16  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version): 0.0.3

	* DESCRIPTION (Depends): Increased to xts 0.9-1.2 with its new xtsAPI.h

	* src/xtsMod.cpp (RCPP_MODULE): Reflect new xtsAPI.h and new function
	names in the xts API, renamed the created R functions accordingly
	* tests/check.R: Updated to new function names
	* man/RcppXts-package.Rd: Idem

2013-01-15  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version): 0.0.2

	* DESCRIPTION (Depends): Versioned Depends: on xts to ensure we a
	version greater than 0.9-1 (currently on CRAN) with corrected init.c

	* src/xtsMod.cpp:
	  o Import stubs have been moved into xts where they belong
	  o New functions for coredata, merge, lag now that xts exports'em

	* tests/check.R: Added minimal tests for new functionality