@@ -1,8 +1,12 @@
 2020-06-23  Dirk Eddelbuettel  <edd@debian.org>
 
+	* DESCRIPTION (Version, Date): Roll minor version and date
+
 	* README.md: Add a 'last commit' badge
 
 	* tests/checks.R: Comment-out two checks for now
+
+	* .travis.yml: Switch to 'bionic' and R 4.0
 
 2018-12-24  Dirk Eddelbuettel  <edd@debian.org>
 
